2008-10-10  Sam Steingold  <sds@gnu.org>

	* makemake.in: finish the 2007-10-29 (1.690) patch:
	remove all mentions of XCC_UNUSABLE_CPP and gcc-cccp

2008-10-10  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (get_file_size) [WIN32_NATIVE]: add
	(FILE-SIZE) [WIN32_NATIVE]: use it instead of GetFileSizeEx
	which takes a handle and not a pathname

2008-10-08  Sam Steingold  <sds@gnu.org>

	* modules/bindings/glibc/linux.lisp (strsignal, _NSIG): add;
	use DEF-C-CONST instead of DEFCONSTANT for signals
	(ECANCELED, ENOKEY, EKEYEXPIRED, EKEYREVOKED, EKEYREJECTED)
	(EOWNERDEAD, ENOTRECOVERABLE): add errnos

2008-10-06  Sam Steingold  <sds@gnu.org>

	fix bug #[ 2146126 ]: name conflict with libmysqlclient
	* spvw.d, lispbibl.d (clisp_malloc): rename from my_malloc
	(clisp_realloc): rename from my_realloc
	* modules/berkeley-db/bdb.c, modules/clx/new-clx/clx.f:
        * modules/i18n/gettext.c, modules/regexp/regexi.c:
        * modules/syscalls/calls.c, foreign.d, spvw_weak.d: update callers

2008-10-03  Sam Steingold  <sds@gnu.org>

	* foreign.d: use BEGIN_DECLS & END_DECLS

2008-09-29  Sam Steingold  <sds@gnu.org>

	* modules/matlab/wrap.lisp (matfile-content): use MEMORY-AS
	instead of WITH-C-VAR+CAST for efficiency
	Suggested by "Hoehle, Joerg-Cyril" <Joerg-Cyril.Hoehle@t-systems.com>

2008-09-26  Sam Steingold  <sds@gnu.org>

	* m4/general.m4 (CL_CANONICAL_HOST_CPU): better mips detection,
	from the debian ffcall patch

2008-09-26  Sam Steingold  <sds@gnu.org>

	* version.sh: 2.46++ (2008-09-23)

2008-09-26  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (path_truncate, stream_truncate)
	[WIN32_NATIVE]: clarify (simplify?) logic

2008-09-24  Sam Steingold  <sds@gnu.org>

	* clhs.lisp (open-http): also include port number in the Host header
	Reported by Raymond Toy <raymond.toy@ericsson.com>

2008-09-24  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (path_truncate) [WIN32_NATIVE]: fix logic

2008-09-23  Sam Steingold  <sds@gnu.org>
